# OxylusProjectTemplate

./: $ProjectName.oxproj
$PROJECT_NAME/: CMakeLists.txt
$PROJECT_NAME/src/: $PROJECT_NAMELayer.cpp  $PROJECT_NAMELayer.hpp  App.cpp
$PROJECT_NAMEModule/: CMakeLists.txt
$PROJECT_NAMEModule/src/: Module.cpp  Module.hpp
.github/workflows/: renamer.yml
